fix: prevent search-container from stretching nested checkbox inputs
.search-container input { flex: 1 } was catching all descendant inputs
including checkboxes inside dropdown menus, stretching them horizontally.
Changed to direct child selector (>) to only target the search text input.

--- a/css/components/forms/search.css
+++ b/css/components/forms/search.css
@@ -41,7 +41,7 @@
     color: var(--color-on-surface-v);
 }
 
-.search-container input {
+.search-container > input {
     flex: 1;
 }
 
